--- a/package.json
+++ b/package.json
@@ -4,22 +4,26 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios"
   },
   "dependencies": {
-    "react": "~15.4.0-rc.4",
-    "react-native": "0.38.0",
-    "react-redux": "^4.4.6",
-    "redux": "^3.6.0"
-  },
-  "devDependencies": {
-    "babel-jest": "17.0.2",
-    "babel-preset-react-native": "1.9.0",
-    "jest": "17.0.3",
-    "jest-react-native": "17.0.3",
-    "react-test-renderer": "~15.4.0-rc.4"
+    "@exponent/ex-navigation": "^2.1.3",
+    "babel-preset-react-native-stage-0": "^1.0.1",
+    "react": "15.3.2",
+    "react-native": "^0.36.0",
+    "react-native-orientation": "git+https://github.com/yamill/react-native-orientation.git",
+    "react-native-vector-icons": "^3.0.0"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "jest-react-native"
+  },
+  "devDependencies": {
+    "babel-jest": "16.0.0",
+    "babel-preset-react-native": "1.9.0",
+    "jest": "16.0.1",
+    "jest-react-native": "16.0.0",
+    "react-test-renderer": "15.3.2"
   }
 }
