--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@exponent/ex-navigation": "^2.1.3",
+    "@exponent/vector-icons": "^2.0.3",
     "babel-preset-react-native-stage-0": "^1.0.1",
     "react": "15.3.2",
     "react-native": "^0.36.0",
