--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,7 @@
 {
-    "presets": ["react-native-stage-0/decorator-support"]
+    "presets": [
+//        "react-native",
+//        "babel-preset-exponent",
+        "react-native-stage-0/decorator-support"
+    ]
 }
