--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-preset-react-native-stage-0": "^1.0.1",
     "react": "15.3.2",
     "react-native": "^0.36.0",
+    "react-native-drawer": "^2.3.0",
     "react-native-orientation": "git+https://github.com/yamill/react-native-orientation.git",
     "react-native-vector-icons": "^3.0.0"
   },
